45. Ilmateate tabeli sorteerimine [Delivers #107658804]

--- a/ilmateade.html
+++ b/ilmateade.html
@@ -5,11 +5,16 @@
     <title></title>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="chosen/chosen.jquery.js"></script>
+    <script type="text/javascript" src="jquery.tablesorter.min.js"></script>
     <link rel="stylesheet" href="chosen/chosen.css">
 
     <style>
         table, td {
             border: solid black;
+        }
+        thead {
+            color: green;
+
         }
     </style>
 
@@ -33,51 +38,62 @@
 <br>
 <br>
 
-<table id="ilmateade"></table>
+<table id="ilmateade" class="tablesorter">
+    <thead>
+    <tr>
+        <th>Linn</th>
+        <th>Ilm</th>
+    </tr>
+    </thead>
+</table>
 
 <script>
 
-       $("#nupp").click(function() {
+    $("#nupp").click(function() {
             var value = $("#city").val();
             $.getJSON("http://api.openweathermap.org/data/2.5/weather?q=" + value + "&APPID=172357f59bbb8abbd07137b2f58e0baf", function(data){
                 $("h1").text(data.weather[0]['description']);
             });
         })
 
-        $.get("http://cors.io/?u=http://openweathermap.org/help/city_list.txt", function(data) {
-            var lines = data.split("\n");
-            result = [];
-            var headers = lines[0].split("\t");
-            for (var i = 1; i < lines.length - 1; i++) {
-                var obj = {};
-                var currentline = lines[i].split("\t");
-                for (var j = 0; j < headers.length; j++) {
-                    obj[headers[j]] = currentline[j];
+       /*if(localStorage && localStorage.getItem('linnad')){
+           render(JSON.parse(localStorage.getItem('linnad')));
+       } else {*/
+
+            $.get("http://cors.io/?u=http://openweathermap.org/help/city_list.txt", function(data) {
+                var lines = data.split("\n");
+                result = [];
+                var headers = lines[0].split("\t");
+                for (var i = 1; i < lines.length - 1; i++) {
+                    var obj = {};
+                    var currentline = lines[i].split("\t");
+                    for (var j = 0; j < headers.length; j++) {
+                        obj[headers[j]] = currentline[j];
+                    }
+
+                    if (obj.countryCode == "EE") {
+                        result.push(obj);
+                    }
                 }
 
-                if (obj.countryCode == "EE") {
-                    result.push(obj);
-                }
-            }
-
-            $.each(result, function (index, item) {
-                $('#linndrop').append(
-                        $('<option></option>').val(item["nm"]).text(item["nm"])
-                );
-            });
-            for(var i=0; i< result.length;i++){
-                $.get("http://api.openweathermap.org/data/2.5/weather?q=" + result[i].nm + "&APPID=172357f59bbb8abbd07137b2f58e0baf", function (data) {
-                    $('#ilmateade').append('<tr><td>'+ data.name.toString() +'</td><td>'+data.weather[0].description.toString().toLocaleLowerCase()+'</td></tr>');
+                $.each(result, function (index, item) {
+                    $('#linndrop').append(
+                            $('<option></option>').val(item["nm"]).text(item["nm"])
+                    );
                 });
-            }
+                for(var i=0; i< result.length;i++){
+                    $.get("http://api.openweathermap.org/data/2.5/weather?q=" + result[i].nm + "&APPID=172357f59bbb8abbd07137b2f58e0baf", function (data) {
+                        $('#ilmateade').append('<tr><td>'+ data.name.toString() +'</td><td>'+data.weather[0].description.toString().toLocaleLowerCase()+'</td></tr>');
+                    });
+                }
 
-            localStorage.setItem('linnad', JSON.stringify(result));
+                localStorage.setItem('linnad', JSON.stringify(result));
 
-            var linnad = JSON.parse(localStorage.getItem('linnad'));
+                var linnad = JSON.parse(localStorage.getItem('linnad'));
 
-            console.log(linnad);
+                console.log(linnad);
 
-        });
+            });
 
         function ilmateade() {
             var value = $("#linndrop").val();
@@ -91,6 +107,11 @@
             width: "25%"
         });   */                                          //chosen'i külge pannes ei laadi enam andmeid...
 
+    $(document).ajaxStop(function(){
+        $("#ilmateade").tablesorter({
+            sortForce: [[3,0]]
+        });
+    })
 
 </script>
 
